--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
-  "name": "rest-api-nodejs-mongodb",
+  "name": "employeesys",
   "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www",
-    "test": "nyc _mocha --timeout 10000 --exit --report lcovonly -- -R spec",
-    "lint": "eslint --fix --config .eslintrc.json \"**/*.js\""
+    "dev": "nodemon ./bin/www"
   },
   "dependencies": {
     "bcrypt": "^3.0.6",
@@ -21,7 +19,7 @@
     "jsonwebtoken": "^8.5.1",
     "mocha-lcov-reporter": "^1.3.0",
     "moment": "^2.24.0",
-    "mongoose": "^5.7.6",
+    "mongoose": "^5.11.15",
     "morgan": "~1.9.0",
     "nodemailer": "^6.3.1"
   },
